[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "abm-tools"
description = "aramaic bible module tools"
authors = [{name = "David James McCorrie", email = "djmccorrie@gmail.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.2.2",
]

[project.urls]
Homepage = "https://machshev.github.io/abm-tools"
Documentation = "https://machshev.github.io/abm-tools"
Changelog = "https://machshev.github.io/abm-tools/changelog"
Repository = "https://github.com/machshev/abm-tools"
Issues = "https://github.com/machshev/abm-tools/issues"
Discussions = "https://github.com/machshev/abm-tools/discussions"
Gitter = "https://gitter.im/abm-tools/community"
Funding = "https://github.com/sponsors/machshev"

[project.scripts]
abm-tools = "abm_tools.cli:main"

[tool.pdm]
version = {source = "scm"}
plugins = [
    "pdm-multirun",
]

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[tool.pdm.dev-dependencies]
duty = ["duty>=0.10"]
ci-quality = ["abm-tools[duty,docs,quality,typing,security]"]
ci-tests = ["abm-tools[duty,tests]"]
docs = [
    "black>=23.9",
    "markdown-callouts>=0.3",
    "markdown-exec>=1.7",
    "mkdocs>=1.5",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-committers-plugin-2>=1.2",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.4",
    "mkdocs-minify-plugin>=0.7",
    "mkdocstrings[python]>=0.23",
    "tomli>=2.0; python_version < '3.11'",
]
maintain = [
    "black>=23.9",
    "blacken-docs>=1.16",
    "git-changelog>=2.3",
]
quality = [
    "ruff>=0.0",
]
tests = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.3",
]
typing = [
    "mypy>=1.5",
    "types-markdown>=3.5",
    "types-pyyaml>=6.0",
]
security = [
    "safety>=2.3",
]
